Base per test automatici

--- a/config.example.json
+++ b/config.example.json
@@ -4,5 +4,6 @@
         "username": ""
     },
     "server": "http://localhost/openstamanager",
-    "browser": ""
+    "browser": "chrome",
+    "headless": false
 }
