Correzioni minori per Init da configurazione

--- a/config.example.json
+++ b/config.example.json
@@ -3,6 +3,12 @@
         "password": "",
         "username": ""
     },
+    "database": {
+        "host": "localhost",
+        "user": "root",
+        "pass": "root",
+        "name": "osm"
+    },
     "server": "http://localhost/openstamanager",
     "browser": "chrome",
     "headless": false
