Fix test account email

--- a/config.example.json
+++ b/config.example.json
@@ -16,7 +16,7 @@
     "tests": {
         "email_user": "",
         "email_password" : "",
-        "tecnico_email": ""
+        "email_receiver": ""
     }
 
 }
