Fix test Attività

--- a/config.example.json
+++ b/config.example.json
@@ -16,7 +16,9 @@
     "tests": {
         "email_user": "",
         "email_password" : "",
-        "email_receiver": ""
+        "email_receiver": "",
+        "tecnico_user": "",
+        "tecnico_password": ""
     }
 
 }
